# blockchainsupplychaintracking

./: .gitignore  Agent.md  README.md
backend-cpp/: CMakeLists.txt  README.md
backend-cpp/include/api/: http_server.h
backend-cpp/include/blockchain/: blockchain_client.h
backend-cpp/include/domain/: ingest_result.h  metrics_snapshot.h  telemetry_packet.h  telemetry_record.h
backend-cpp/include/security/: signature_verifier.h
backend-cpp/include/services/: ingest_service.h
backend-cpp/include/storage/: in_memory_telemetry_repository.h  sqlite_telemetry_repository.h  telemetry_repository.h
backend-cpp/include/transport/: json_parser.h
backend-cpp/include/utils/: hash_utils.h
backend-cpp/keys/public/: README.md  pubkey-1.pem
backend-cpp/src/: main.cpp
backend-cpp/src/api/: http_server.cpp
backend-cpp/src/blockchain/: ethereum_rpc_blockchain_client.cpp  mock_blockchain_client.cpp
backend-cpp/src/ingest/: ingest_service.cpp
backend-cpp/src/security/: basic_signature_verifier.cpp
backend-cpp/src/storage/: in_memory_telemetry_repository.cpp  sqlite_telemetry_repository.cpp
backend-cpp/src/transport/: json_parser.cpp
backend-cpp/src/utils/: hash_utils.cpp
backend-cpp/tests/: test_ethereum_rpc_client.cpp  test_ingest_service.cpp  test_json_parser.cpp  test_sqlite_repository.cpp
docs/api/: openapi-outline.md
docs/architecture/: overview.md
docs/demo/: runbook.md
docs/thesis/: metrics-evidence-template.md  module-mapping.md
frontend/: README.md  biome.json  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: main.ts
frontend/src/api/: http.test.ts  http.ts  metrics.test.ts  metrics.ts  traceability.test.ts  traceability.ts
frontend/src/components/: EventFeed.vue  MetricCard.vue  TraceRecordList.vue
frontend/src/layouts/: AppShell.vue
frontend/src/router/: index.ts
frontend/src/styles/: theme.css
frontend/src/types/: contracts.ts
frontend/src/websocket/: client.test.ts  (+3 more)
infra/compose/: docker-compose.yml
shared/contracts/: telemetry.schema.json
stm32-firmware/: CMakeLists.txt  README.md
stm32-firmware/App/include/: app_main.h  comm_lora.h  comm_status.h  comm_wifi.h  sensor_manager.h  signer.h  telemetry_packet.h
stm32-firmware/App/src/: app_main.c  comm_lora.c  comm_wifi.c  sensor_manager.c  signer.c  telemetry_packet.c
stm32-firmware/tests/: CMakeLists.txt  test_packet_sign.c
tools/qa/: README.md  ingest_benchmark.py  run_ingest_benchmark.sh
tools/simulator/: README.md
(+5 files in other folders)
